short message changed & spacing issue

--- a/src/index.css
+++ b/src/index.css
@@ -1903,6 +1903,8 @@ h6 {
       border-radius: 20px;
    }
 
+    
+
 }
 
 /* .slider2::before {
@@ -2064,5 +2066,5 @@ h6 {
    font-weight: 600;
    color: #b27f4a;
    text-align: center;
-   margin: 20px 0;
+   
 }
